cmake_minimum_required(VERSION 2.8.4)
project(ext)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    kernel/extended/array.c
    kernel/extended/array.h
    kernel/array.c
    kernel/array.h
    kernel/assert.c
    kernel/assert.h
    kernel/backtrace.c
    kernel/backtrace.h
    kernel/concat.c
    kernel/concat.h
    kernel/debug.c
    kernel/debug.h
    kernel/exception.c
    kernel/exception.h
    kernel/exit.c
    kernel/exit.h
    kernel/fcall.c
    kernel/fcall.h
    kernel/file.c
    kernel/file.h
    kernel/filter.c
    kernel/filter.h
    kernel/globals.h
    kernel/hash.c
    kernel/hash.h
    kernel/iterator.c
    kernel/iterator.h
    kernel/main.c
    kernel/main.h
    kernel/memory.c
    kernel/memory.h
    kernel/object.c
    kernel/object.h
    kernel/operators.c
    kernel/operators.h
    kernel/output.c
    kernel/output.h
    kernel/persistent.c
    kernel/persistent.h
    kernel/require.c
    kernel/require.h
    kernel/session.c
    kernel/session.h
    kernel/string.c
    kernel/string.h
    kernel/variables.c
    kernel/variables.h
    owl/annotations/annot.h
    owl/annotations/base.c
    owl/annotations/exception.zep.c
    owl/annotations/exception.zep.h
    owl/annotations/lemon.c
    owl/annotations/lempar.c
    owl/annotations/parser.c
    owl/annotations/parser.h
    owl/annotations/reader.zep.c
    owl/annotations/reader.zep.h
    owl/annotations/scanner.c
    owl/annotations/scanner.h
    owl/bridge/lynx/rest/entitycontroller.zep.c
    owl/bridge/lynx/rest/entitycontroller.zep.h
    owl/http/request.zep.c
    owl/http/request.zep.h
    owl/http/response.zep.c
    owl/http/response.zep.h
    owl/module/manager.zep.c
    owl/module/manager.zep.h
    owl/mvc/controller.zep.c
    owl/mvc/controller.zep.h
    owl/router/route.zep.c
    owl/router/route.zep.h
    owl/router/router.zep.c
    owl/router/router.zep.h
    owl/router/routerinterface.zep.c
    owl/router/routerinterface.zep.h
    owl/service/manager.zep.c
    owl/service/manager.zep.h
    owl/application.zep.c
    owl/application.zep.h
    owl/exception.zep.c
    owl/exception.zep.h
    config.h
    ext.h
    ext_config.h
    owl.c
    owl.h
    php_ext.h
    php_owl.h)

add_executable(ext ${SOURCE_FILES})